--- a/django_project_boilerplate/requirements.txt
+++ b/django_project_boilerplate/requirements.txt
@@ -1,6 +1,6 @@
-Django==2.2
-django-debug-toolbar==1.10.1
-pkg-resources==0.0.0
-python-decouple==3.1
-pytz==2018.5
-sqlparse==0.2.4
+django>=2.2.2
+django-debug-toolbar>==1.10.1
+pkg-resources>==0.0.0
+python-decouple>==3.1
+pytz>==2018.5
+sqlpars>e==0.2.4
