--- a/django_project_boilerplate/.vscode/settings.json
+++ b/django_project_boilerplate/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\sohan\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Users\\Asus\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "git.ignoreLimitWarning": true
 }
